# composio-coderabbit

./: .gitignore  PDF_CHAT_INTEGRATION.md  README.md  output.txt  package-lock.json  package.json  pnpm-lock.yaml  start-pdf-api.bat  start-pdf-api.py
app/: globals.css  layout.tsx
app/api/auth/signup/: route.ts
app/auth/login/: page.tsx
app/auth/signup/: page.tsx
app/dashboard/: page.tsx
backend_engine/: README.md  composio_data_fetcher.py  composio_repo_fetcher.py  pyproject.toml  report.md  search_api.py  test_github_flow.py
backend_engine/src/backend_engine/: crew.py  main.py
backend_engine/src/backend_engine/config/: agents.yaml  tasks.yaml
components/: theme-provider.tsx
components/chat/: ChatWithDocs.tsx
components/dashboard/: Dashboard.tsx
components/developer/: ActivityFeed.tsx  CodeImpactVisualizer.tsx  ProjectContextCards.tsx
components/executive/: DecisionAnalytics.tsx  ExecutiveDashboard.tsx  KPIDashboard.tsx  RiskAssessment.tsx  TeamIntelligence.tsx
components/graph/: KnowledgeGraph.tsx
components/insights/: InsightsDashboard.tsx
components/manager/: ManagerDashboard.tsx
components/search/: SearchInterface.tsx
components/timeline/: StoriesTimeline.tsx
data/: users.json
hooks/: use-pdf-chat.ts
lib/: auth.ts  pdf-api.ts
pdf_extraction/: README.md  requirements.txt
pdf_extraction/config/: settings.py
pdf_extraction/src/: __init__.py  chat_with_pdf.py  run_extractor.py
pdf_extraction/src/faiss_index/: index.faiss  index.pkl
utils/: composioApi.ts  mockApi.ts  types.ts
(+11 files in other folders)
